--- a/login/login.html
+++ b/login/login.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>主页</title>
-    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./login.css">
 </head>
 
 <body>
-    <h1>这是index主页</h1>
-    <a href="./login/login.html">登录模块</a>
+
 </body>
 
 </html>
